[package]
name = "asdi"
description = "Another Simplistic Datalog Implementation (in Rust)"
version = "0.2.2"
edition = "2021"
repository = "https://github.com/johnstonskj/rust-asdi"
license-file = "LICENSE"
readme = "README.md"

[features]
default = ["parser", "tabular", "io"]
parser = ["pest", "pest_derive"]
tabular = ["prettytable-rs"]
io = ["io_csv", "io_json", "io_text"]
io_csv = ["csv"]
io_json = ["serde_json"]
io_text = ["tabular"]

typeset = []

[dependencies]
tracing = "0.1.29"
paste = "1.0"

csv = { version = "1.1", optional = true }
serde_json = { version = "1.0", optional = true }
pest = { version = "2.1", optional = true }
pest_derive = { version = "2.1", optional = true }
prettytable-rs = { version = "0.8", optional = true }

[dev-dependencies]
pretty_assertions = "1.0"
proptest = "1.0"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "doc-src/header.html" ]