[package]
name = "asdi"
description = "Another Simplistic Datalog Implementation (in Rust)"
version = "0.2.5"
edition = "2021"
repository = "https://github.com/johnstonskj/rust-asdi"
license-file = "LICENSE"
readme = "README.md"

[[bin]]
name = "asdi"
test = false
bench = false
required-features = ["command_line", "graphviz", "parser", "tabular", "io"]

[features]
default = ["parser", "tabular", "io"]
graphviz = []
parser = ["pest", "pest_derive"]
tabular = ["prettytable-rs"]
io = ["io_csv", "io_json", "io_text"]
io_csv = ["csv"]
io_json = ["serde_json"]
io_text = ["tabular"]
command_line = ["structopt"]

[dependencies]
ordered-float = "3.0"
paste = "1.0"
regex = "1.6"
tracing = "0.1"

csv = { version = "1.1", optional = true }
serde_json = { version = "1.0", optional = true }
pest = { version = "2.3", optional = true }
pest_derive = { version = "2.3", optional = true }
prettytable-rs = { version = "0.10", optional = true }
structopt = { version = "0.3", optional = true }
serde = "1.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
pretty_assertions = "1.2"
proptest = "1.0"

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "naive"
harness = false

[[bench]]
name = "stratified"
harness = false

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "doc-src/header.html" ]
